增加说明