@@ -1,4 +1,9 @@
 ## 待完善任务项
+ - jdk 9+ 版本中 spring 反射非法访问
+    临时解决方法是在启动脚本中增加如下jvm参数，待spring版本更新至5.1.0之后将会修复此问题
+```
+--add-opens java.base/java.lang=ALL-UNNAMED
+```
  - admin-server 未完成的监控服务
     1. https://www.cnblogs.com/shunyang/p/7011306.html
     2. https://www.jianshu.com/p/6b7f0488ddff
